Fixed phonegap build page

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -42,6 +42,10 @@ img {
   }
 }
 
+#sign-in {
+
+}
+
 .rounded {
   border-radius: 4px;
   -webkit-border-radius: 4px;
